# bombengine

./: .gitignore  .gitmodules  CMakeLists.txt
lib/assimp/lib/x64/pkgconfig/: assimp.pc
lib/assimp/lib/x86/: assimp-vc143-mt.lib
lib/draco/include/draco/core/: bit_utils.h
lib/draco/lib/x86/pkgconfig/: draco.pc
lib/kubazip/lib/x64/: kubazip.lib
lib/kubazip/lib/x86/: kubazip.lib
lib/minizip/lib/x64/: minizip.lib
lib/minizip/lib/x64/pkgconfig/: minizip.pc
lib/minizip/lib/x86/: minizip.lib
lib/poly2tri/include/poly2tri/sweep/: sweep.h
lib/poly2tri/lib/x64/: poly2tri.lib
lib/poly2tri/lib/x86/: poly2tri.lib
lib/pugixml/lib/x86/: pugixml.lib
lib/pugixml/lib/x86/pkgconfig/: pugixml.pc
res/: screen.json  simple.frag  simple.json  simple.vert
res/shader/screen/: screen.frag  screen.vert
src/: main.cpp
src/core/: core.cpp  core.h
src/core/input/: input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/core/scene/: component.cpp  component.h  gameobject.cpp  gameobject.h  scene.cpp  scene.h  scenes.cpp  scenes.h  transform.cpp  transform.h
src/core/scene/component/: cameracomponent.cpp  cameracomponent.h  modelcomponent.cpp  modelcomponent.h
src/core/utility/: bitset.cpp  bitset.h  color.cpp  color.h  time.cpp  time.h
src/core/window/: context.cpp  context.h  rendersource.h  screen.cpp  screen.h  window.cpp  window.h  windowmanager.cpp  windowmanager.h  windowproperties.h  windows.cpp  windows.h
src/core/window/screen/: screen.cpp  screen.h  screenstack.cpp  screenstack.h
src/demo/: demoscene.cpp  demoscene.h  main.cpp
src/file/: fileloader.cpp  fileloader.h
src/file/type/: filetype.h  imagefile.cpp  imagefile.h  textfile.cpp  textfile.h
src/rendering/: element_buffer.h  mesh.h  model.h  renderable.h  vertex.h  vertex_array.h  vertex_buffer.h
src/rendering/camera/: CameraTarget.h  camera.cpp  camera.h
src/rendering/camera/projection/: orthographicprojection.cpp  orthographicprojection.h  perspectiveprojection.cpp  perspectiveprojection.h  projection.h  projectionfactory.cpp  projectionfactory.h  projectiontype.h
src/rendering/material/: material.cpp  material.h
src/rendering/model/: buffer.cpp  buffer.h  mesh.cpp  mesh.h  model.cpp  model.h  vertex.h  vertexarray.cpp  vertexarray.h
src/rendering/model/primitive/: quad.cpp  quad.h
src/rendering/shader/: shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  shadertype.h
src/rendering/texture/: colorbuffer.cpp  colorbuffer.h  framebuffer.cpp  framebuffer.h  graphic.h  renderbuffer.cpp  renderbuffer.h  texture.cpp  texture.h
src/resources/: resource.cpp  resource.h  resources.cpp  resources.h
src/resources/type/: imagefile.cpp  imagefile.h  materialfile.cpp  materialfile.h  modelfile.cpp  modelfile.h  screenfile.cpp  screenfile.h  textfile.cpp  textfile.h
